--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="bot_setup_description_4">Start a chat with BotFather by tapping “Start”</string>
     <string name="bot_setup_description_5">Select “create a new bot” from the menu</string>
     <string name="bot_setup_description_6">Follow BotFather’s prompts to configure a bot</string>
-    <string name="bot_setup_description_7">Copy the API token BotFather provides</string>
+    <string name="bot_setup_description_7">Copy the API token provided by BotFather</string>
     <string name="bot_setup_description_8">Paste the API token into the text field below</string>
     <string name="sample_telegram_bot_api_token">0000000000:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</string>
     <string name="bot_api_token_input_placeholder">Paste token here</string>
